Importなどを修正